K1J-1240: schematron wip